Added index.html file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,12 +12,12 @@
   
 	<div class="container">
 		<div class="img">
-			<img src="images\img11.jpeg">
+			<img src="images\imageedit_1_7104999430.png">
 		</div>
 		<div class="login-content">
 			<form action="index.html">
-				<img src="images\planzo-1.jpg">
-				<h2 style="color:#f88b69">Welcome TO PLANZO  </h2>
+				<img src="images\GREEN.png">
+				<h2 class="title">Welcome TO PLANZO</h2>
            		<div class="input-div one">
            		   <div class="i">
            		   		<i class="fas fa-user"></i>
@@ -32,8 +32,8 @@
            		    	<i class="fas fa-lock"></i>
            		   </div>
            		   <div class="div">
-           		    	<!-- <h5>Password</h5> -->
-           		    	<input type="password" class="input" placeholder="Password">
+           		    	<h5>Password</h5>
+           		    	<input type="password" class="input">
             	   </div>
             	</div>
             	<a href="#">Forgot Password?</a>
