added signup page

--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -8,6 +8,7 @@
     <title>sign-up-page</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+<!-- sign-up-page -->
 <body>
     <div class="container">
         <div class="forms-container">
