--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="login-content">
 			<form action="index.html">
-				<img src="images\GREEN.png">
+				<img class="align" src="images\GREEN.png">
 				<h2 class="title">Welcome TO PLANZO</h2>
            		<div class="input-div one">
            		   <div class="i">
