connected till booking.html

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -12,7 +12,7 @@
     <div class="container">
     <div class="forms-container">
     <div class="signin-signup">
-        <form action="#" class="sign-in-form">
+        <form method="post" action="menu.html" class="sign-in-form">
             <h2 class="title">sign in</h2>
             <div class="input-field">
                 <i class="fas fa-user"></i>
@@ -48,8 +48,12 @@
     
     </div>
     <div class="panels-container">
-        <div class="panel left-panel">
-            <img src="images\146469682-online-education-home-learning-home-activity-concept-student-is-doing-homework-on-laptop-vector-illu.png" alt="" class="image"/>
+         <div class="panel">
+             <div class="content"> 
+                <h3 class="txt">NEW HERE?</h3>
+                <button class="btn transparent" id="sign-up-button">sign up</button>
+            </div>
+            <img  class="imi" src="images/image1.png" alt="" class="image"/>
 
         </div>
         
