--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="forms-container">
     <div class="signin-signup">
-        <form action="#" class="sign-up-form">
+        <form method="post" action="signin.html" class="sign-up-form">
             <h2 class="title">sign up</h2>
             <div class="input-field">
                 <i class="fas fa-user"></i>
@@ -55,7 +55,7 @@
     </div>
         <div class="panels-container">
             <div class="panel right-panel">
-                <img src="images\146469682-online-education-home-learning-home-activity-concept-student-is-doing-homework-on-laptop-vector-illu.png" alt="" class="image"/>
+                <img src="images/image1.png" alt="" class="image"/>
     
             </div>
             </div>
