--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="assets/designmenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
                 <i class="fas fa-book" aria-hidden="true"></i>
                 <span class="nav-item">Book Status</span>
             </a></li>
-            <li><a href="#">
+            <li><a href="booking.html">
                 <i class="fas fa-list-alt"></i>
                 <span class="nav-item">Booking Rooms</span>
             </a></li>
@@ -43,8 +43,7 @@
 
         </ul>
     </nav>
-    <section>
-        <div>Hello World</div>
-    </section>
+    
+    
 </body>
 </html>
