--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -51,9 +51,9 @@
          <div class="panel">
              <div class="content"> 
                 <h3 class="txt">NEW HERE?</h3>
-                <button class="btn transparent" id="sign-up-button">sign up</button>
+                <button class="btn transparent solid" id="sign-up-button"> <a class="imi" href="signup.html">SIGN UP</a>  </button>
             </div>
-            <img  class="imi" src="images/image1.png" alt="" class="image"/>
+            <img src="images/image1.png" alt="" class="image"/>
 
         </div>
         
