--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -13,7 +13,7 @@
     <div class="forms-container">
     <div class="signin-signup">
         <form method="post" action="menu.html" class="sign-in-form">
-            <h2 class="title">sign in</h2>
+            <h2 class="title">Sign in</h2>
             <div class="input-field">
                 <i class="fas fa-user"></i>
                     <input type="text" placeholder="Username"/>
