--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -14,7 +14,7 @@
         <div class="forms-container">
     <div class="signin-signup">
         <form method="post" action="signin.html" class="sign-up-form">
-            <h2 class="title">sign up</h2>
+            <h2 class="title">Sign up</h2>
             <div class="input-field">
                 <i class="fas fa-user"></i>
                     <input type="text" placeholder="Username"/>
