update to signin page

--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -51,7 +51,7 @@
          <div class="panel">
              <div class="content"> 
                 <h3 class="txt">NEW HERE?</h3>
-                <button class="btn transparent solid" id="sign-up-button"> <a class="imi" href="signup.html">SIGN UP</a>  </button>
+                 <a href="signup.html"><input type="submit" class="btn solid" value="Sign Up"/> </a> 
             </div>
             <img src="images/image1.png" alt="" class="image"/>
 
