--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -50,8 +50,8 @@
     <div class="panels-container">
          <div class="panel">
              <div class="content"> 
-                <h3 class="txt">NEW HERE?</h3>
-                 <a href="signup.html"><input type="submit" class="btn solid" value="Sign Up"/> </a> 
+                <h3>NEW HERE?</h3>
+                 <a href="signup.html"><input type="submit" class="btn1 solid" value="Sign Up"/> </a> 
             </div>
             <img src="images/image1.png" alt="" class="image"/>
 
