added landing page

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -5,8 +5,8 @@
 <title> CSS Login Screen Tutorial </title>
 </head>
 <body>
-  <img src="images/logo1.png" width="5%" height="3%" >
-  <i class="title">Planzo</i>
+  <img src="images/logo4.png" width="5%" height="3%" >
+  <!-- <i class="title">Planzo</i> -->
     <div class="login-page">
    
       <div class="form">
@@ -19,8 +19,8 @@
         <form class="login-form">
           <input type="text" placeholder="username"/>
           <input type="password" placeholder="password"/>
-          <button>login</button>
-          <p class="message">Not registered? <a href="#">Create an account</a></p>
+           <button class="btn solid" value="SignUp"><a class="link_btn" href="book.html">Login</a></button>
+          
         </form>
       </div>
     </div>
