--- a/HTML/room10.html
+++ b/HTML/room10.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/4e.jpg" class="responsive">
+        <img src="images/4e.jpg" class="responsive">
         <div class="text">
             <h2>Ardeshir Godrej</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of blue color and it is present inside the infinity studio which is located in Ground floor</p>
