--- a/HTML/room13.html
+++ b/HTML/room13.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/8.jpg" class="responsive">
+        <img src="images/8.jpg" class="responsive">
         <div class="text">
             <h2>Narayana Murthy</h2>
             <p>This meeting room consist the space where only 8 people can occupy and it is located in First floor</p>
