--- a/HTML/room14.html
+++ b/HTML/room14.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/10.jpg" class="responsive">
+        <img src="images/10.jpg" class="responsive">
         <div class="text">
             <h2>Ratanji Tata</h2>
             <p>This meeting room consist the space where only 10 people can occupy and it is located in Ground floor</p>
