--- a/HTML/room3.html
+++ b/HTML/room3.html
@@ -11,7 +11,7 @@
 <body>
     <div class="section">
         
-        <img src="Images/single B.jpg" >
+        <img src="images/single B.jpg" >
         <div class="text">
             <h3>Peush Bansal </h3>
             <p>This meeting room consist the space where only 1 person can occupy, the room is of sky blue color and is in the ground floor</p>
