--- a/HTML/room4.html
+++ b/HTML/room4.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/single Y.jpg" class="responsive">
+        <img src="images/single Y.jpg" class="responsive">
         
         <div class="text">
             <h2>Bjyu Raveendran</h2>
