--- a/HTML/room5.html
+++ b/HTML/room5.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/4.jpg" class="responsive">
+        <img src="images/4.jpg" class="responsive">
         <div class="text">
             <h2>Verghese kurien</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of white color and is in the Basement area</p>
