--- a/HTML/room7.html
+++ b/HTML/room7.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/4b.jpg" class="responsive">
+        <img src="images/4b.jpg" class="responsive">
         <div class="text">
             <h2>Goutam Adani</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of red color and it is present inside the Co- Working space which is located in Ground floor</p>
