--- a/HTML/room12.html
+++ b/HTML/room12.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/4g.jpg" class="responsive">
+        <img src="images/4g.jpg" class="responsive">
         <div class="text">
             <h2>Shiv Nadar</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of orange color and it is present inside the infinity studio which is located in Ground floor</p>
