--- a/HTML/room15.html
+++ b/HTML/room15.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/12.jpg" class="responsive">
+        <img src="images/12.jpg" class="responsive">
         <div class="text">
             <h2>Dhirubhai Ambani</h2>
             <p>This meeting room consist the space where 12 people can occupy and it is present inside the infinity studio which is located in Ground floor</p>
