--- a/HTML/room2.html
+++ b/HTML/room2.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/single G.jpg" class="responsive">
+        <img src="images/single G.jpg" class="responsive">
         
         <div class="text">
             <h2>Aman Gupta</h2>
