--- a/HTML/room9.html
+++ b/HTML/room9.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="section">
-        <img src="Images/4d.jpg" class="responsive">
+        <img src="images/4d.jpg" class="responsive">
         <div class="text">
             <h2>Ekta Kapoor</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of lemon yellow color and it is present inside the infinity studio which is located in Ground floor</p>
