--- a/HTML/book.html
+++ b/HTML/book.html
@@ -43,7 +43,7 @@
                 <span class="tooltip" style="text-align: center;">Booking Rooms</span>
             </li>
             <li>
-                <a href="#">
+                <a href="order.html">
                     <i class='bx bxs-coffee-alt'></i>
                     <span class="links_name">Order </span>
                 </a>
