--- a/HTML/choose.html
+++ b/HTML/choose.html
@@ -63,7 +63,7 @@
           </a>
           <div class="menu-item-text">
             <h3 class="menu-item-heading">
-              <span class="menu-item-name">Peush Bansal </span>
+              <span class="menu-item-name">Peyush Bansal </span>
               <span class="menu-item-price">Capacity: 1</span>
             </h3>
             <p class="menu-item-description">
