--- a/HTML/home.html
+++ b/HTML/home.html
@@ -58,6 +58,10 @@
                         <div class="product-image">
                             <img src="images/img9.jpg" class="product-thumb" alt="">     
                         </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                                <img src="images/img4.jpg" class="product-thumb" alt="">     
+                        </div>
                         
                     
                     </div>
