--- a/HTML/home.html
+++ b/HTML/home.html
@@ -35,8 +35,8 @@
             <!-- f0r---------------------slider------------------- -->
             <section class="product"> 
                 <h2 class="product-category"></h2>
-                <button class="pre-btn"><img src=""></button>
-                <button class="nxt-btn"><img src="images\arrow.png"></button>
+                <button class="pre-btn"></button>
+                <button class="nxt-btn"></button>
                 <div class="product-container">
                     <div class="product-card">
                         <div class="product-image">
