--- a/HTML/room2.html
+++ b/HTML/room2.html
@@ -13,7 +13,7 @@
         <img src="images/single O.jpeg" class="responsive">
         
         <div class="text">
-            <h2>Aman Gupta</h2>
+            <h2>Vijay Shakar Sharma</h2>
             <p>This meeting room consist the space where only 1 person can occupy, the room is of orange color and is in the ground floor</p></p>
             <h3>Availabilities in Room</h3>
                 <ul class="list-group">
