--- a/HTML/book.html
+++ b/HTML/book.html
@@ -29,7 +29,7 @@
             </div>
 
             <li>
-                <a href="#">
+                <a href="occupied.html">
                     <i class='bx bxs-book-bookmark'></i>
                     <span class="links_name">Status </span>
                 </a>
