--- a/HTML/occupied.html
+++ b/HTML/occupied.html
@@ -42,21 +42,21 @@
             </div>
 
             <li>
-                <a href="#">
+                <a href="occupied.html">
                     <i class='bx bxs-book-bookmark'></i>
                     <span class="links_name">Status </span>
                 </a>
                 <span class="tooltip" style="font-weight: 12pt;">Meeting Room Status</span>
             </li>
             <li>
-                <a href="#">
+                <a href="book.html">
                     <i class='bx bxs-spreadsheet'></i>
                     <span class="links_name">Booking</span>
                 </a>
                 <span class="tooltip" style="text-align: center;">Booking Rooms</span>
             </li>
             <li>
-                <a href="#">
+                <a href="order.html">
                     <i class='bx bxs-coffee-alt'></i>
                     <span class="links_name">Order </span>
                 </a>
