--- a/HTML/home.html
+++ b/HTML/home.html
@@ -146,8 +146,8 @@
             
             
          <!-- <input type="SUBMIT" placeholder="SUBMIT" class="btn"> -->
-            <button class="btn solid" value="SignUp">Submit</button>
-            <!-- <button class="btn solid" value="SignUp"><a class="link_btn" href="login.html">Submit</a></button> -->
+           <!-- <button class="btn solid" value="SignUp">Submit</button> -->
+            <button class="btn solid" value="SignUp"><a class="link_btn" href="login.html">Submit</a></button> 
 
             </form>
     </section>
@@ -194,7 +194,7 @@ if(a==""){
     return false;
 }
 if(a.length<5){
-    documentById("messages").innerHTML="**Password length must be greater than 25 characters"
+    documentById("messages").innerHTML="**Password length must be greater than 7 characters"
     return false;
 }
 
