--- a/HTML/room1.html
+++ b/HTML/room1.html
@@ -25,9 +25,7 @@
         
             <a href="choose.html" class="button">Go Back</a>
             <a href="something" class="button">Book</a>
-            <div class="calender">
-                <a href="https://calendar.google.com/calendar/u/0/r?tab=rc">calender</a>
-            </div>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button">calender</a>
         </div>
         </div>
        
