--- a/HTML/room6.html
+++ b/HTML/room6.html
@@ -25,6 +25,8 @@
         
             <a href="choose.html" class="button">Go Back</a>
             <a href="something" class="button">Book</a>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button">calender</a>
+            
         </div>
         </div>
 </body>
