--- a/HTML/room1.html
+++ b/HTML/room1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
     <link rel="stylesheet" href="assets/1.css">
+    <!-- <link rel="shortcut icon" type="link" href="https://calendar.google.com/calendar/u/0/r?tab=rc"> -->
+
 </head>
 
 <body>
@@ -25,7 +27,7 @@
         
             <a href="choose.html" class="button">Go Back</a>
             <a href="something" class="button">Book</a>
-            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button">calender</a>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">calender</a>
         </div>
         </div>
        
