--- a/HTML/room5.html
+++ b/HTML/room5.html
@@ -24,7 +24,7 @@
         
             <a href="choose.html" class="button">Go Back</a>
             <a href="something" class="button">Book</a>
-            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button">calender</a>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">calender</a>
         </div>
         </div>
 </body>
