rooms.html connected to book.html file

--- a/HTML/book.html
+++ b/HTML/book.html
@@ -60,8 +60,8 @@
         </ul>
         <div class="profile_content">
             
-                <i class='bx bx-log-out tooltip' id="logout"></i>
-                <span class="tooltop">Log out</span>
+                <a href="login.html"><i class='bx bx-log-out tooltip' id="logout"></i>
+                <span class="tooltop">Log out</span></a>
             </div>
         </div>
 
@@ -94,7 +94,7 @@
                         <i class="fa fa-calendar"></i>
                         <input type="date" placeholder="date">
                     </div>
-                    <button><a class="link_btn" href="choose.html"> Choose Room</a></button>
+                    <button class="link_btn">Confirm</button>
 
                 </form>
             </div>
