--- a/HTML/room11.html
+++ b/HTML/room11.html
@@ -23,7 +23,7 @@
             </p>
         
             <a href="choose.html" class="button">Go Back</a>
-            <a href="something" class="button">Book</a>
+            <a href="book.html" class="button">Book</a>
         </div>
         </div>
 </body>
