added select.html file

--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -140,7 +140,7 @@
             <!-- <input type="SUBMIT" placeholder="SUBMIT" class="btn"> -->
             <button class="btn solid" value="SignUp">Submit</button>
             <!-- <button class="btn solid" value="SignUp"><a class="link_btn" href="login.html">Submit</a></button> -->
-
+             <span style="color: #;" >Already have a account<a href="login.html">Login</a></span>
             </form>
     </section>
    
