--- a/HTML/order.html
+++ b/HTML/order.html
@@ -64,15 +64,15 @@
                 <i class='bx bx-menu' id="btn"></i>
             </div>
 
-            <li>
+            <!-- <li>
                 <a href="occupied.html">
                     <i class='bx bxs-book-bookmark'></i>
                     <span class="links_name">Status </span>
                 </a>
                 <span class="tooltip" style="font-weight: 12pt;">Meeting Room Status</span>
-            </li>
+            </li> -->
             <li>
-                <a href="book.html">
+                <a href="choose.html">
                     <i class='bx bxs-spreadsheet'></i>
                     <span class="links_name">Booking</span>
                 </a>
@@ -92,15 +92,31 @@
                 </a>
                 <span class="tooltop">User Profile</span>
             </li>
-
+            <div>
+            <!-- <li>
+              <a href="#">
+                  <i class='bx bx-log-out'></i>
+                  <span class="links_name" id="logout">Log out</span>
+              </a>
+              <span class="tooltop">Log out</span>
+          </li>
+          </div> -->
+          </div>
         </ul>
-        <div class="profile_content">
-            <div class="profile">
-                
-                <i class='bx bx-log-out tooltip' id="logout"></i>
-                <span class="tooltop">Log out</span>
-            </div>
-        </div>
+        <!-- <div class="profile_content">
+            <div class="profile"> -->
+                <ul>
+                  <li>
+                    <a href="login.html">
+                <i class='bx bx-log-out'></i>
+                <span class="links_name">Log out</span>
+              </a>
+              <span class="tooltop">Log Out</span>
+              </li>
+            <!-- </div>
+              
+        </div> -->
+      </ul>
 
 
 
