added html files

--- a/HTML/room11.html
+++ b/HTML/room11.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="section">
+        <span class="close"><a href="choose.html">&times;</a></span>
         <img src="images/4f.jpg" class="responsive">
         <div class="text">
             <h2>Azim Premji</h2>
@@ -22,8 +23,8 @@
                   </ul>
             </p>
         
-            <a href="choose.html" class="button">Go Back</a>
-            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">calender</a>
+            <a href="book.html" class="button">Book</a>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">Calender</a>
         </div>
         </div>
 </body>
