--- a/HTML/room14.html
+++ b/HTML/room14.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="section">
+        <span class="close"><a href="choose.html">&times;</a></span>
         <img src="images/10.jpg" class="responsive">
         <div class="text">
             <h2>Ratanji Tata</h2>
@@ -26,9 +27,9 @@
                 </ul>
             </p>
         
-            <a href="choose.html" class="button">Go Back</a>
+            
             <a href="book.html" class="button">Book</a>
-            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">calender</a>
+            <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" class="button" target="_blank">Calender</a>
         </div>
         </div>
 </body>
