--- a/HTML/room1.html
+++ b/HTML/room1.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
     <link rel="stylesheet" href="assets/1.css">
-    <!-- <link rel="shortcut icon" type="link" href="https://calendar.google.com/calendar/u/0/r?tab=rc"> -->
-
+    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
 </head>
 
 <body>
     <div class="section">
         <span class="close"><a href="choose.html">&times;</a></span>
         <img src="images/single G.jpg" class="responsive">
-        <!-- <span class="close">&times;</span> -->
+        
         
         <div class="text">
             <h2>Aman Gupta</h2>
