--- a/HTML/login.html
+++ b/HTML/login.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/logo4.png" width="5%" height="3%">
+  <img src="images\logo3-removebg-preview.png" width="5%" height="3%">
   <!-- <i class="title">Planzo</i> -->
   <div class="login-page">
 
