--- a/HTML/home.html
+++ b/HTML/home.html
@@ -156,9 +156,9 @@
 
             
 
-        </form>
+        
         <div class="icon">
-         <button class="btn solid" onclick="makeGetRequest()"  value="SignUp">Submit</button>
+         <button class="btn solid" onclick="makeGetRequest()"  value="SignUp">Submit</button> </form>
 </div>
     </section>
 
