--- a/HTML/room7.html
+++ b/HTML/room7.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="section">
-        <span class="close"><a href="choose.html">&times;</a></span>
+        <span class="close"><a href="capacity4.html">&times;</a></span>
         <img src="images/4b.jpg" class="responsive">
         <div class="text">
             <h2>Goutam Adani</h2>
