--- a/HTML/room6.html
+++ b/HTML/room6.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="section">
-        <span class="close"><a href="choose.html">&times;</a></span>
-        <img src="images/4a.jpg" class="responsive">
+        <span class="close"><a href="capacity4.html">&times;</a></span>
+        <img src="images/4a.jpg" class="responsive"
+        >
         <div class="text">
             <h2>Vineeta Singh</h2>
             <p>This meeting room consist the space where only 4 people can occupy, the room is of green color and it is present inside the Co- Working space which is located in Ground floor</p>
