added changes to book.html

--- a/HTML/book.html
+++ b/HTML/book.html
@@ -68,6 +68,7 @@
 
 
     </div>
+    <div>
     <div class="home_content">
         <!-- <div class="text">Meeting Room Booking -->
             <div class="container">
@@ -97,7 +98,8 @@
                     <!-- <button class="link_btn" onclick="makeGetRequest()">Confirm</button> -->
 
                 </form>
-                <button class="link_btn" onclick="makeGetRequest()">Confirm</button>    
+              <button class="link_btn center cease" onclick="makeGetRequest()">Confirm</button>  
+            </div>
             </div>
         <!-- </div> -->
 
