changes added to Login.

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -151,6 +151,9 @@
                 <input type="password" placeholder="Confirm Password" name="password" id="pass" class="box" required><br><br>
                 <span><input type="checkbox" onclick="myFunction()">Show Password</span>
             </div>
+            <div class="icon">
+               <p class="size">Already have an account <strong><a href="login.html" class="change">Login</a></strong></p>
+             </div>
             <!-- <span><input type="checkbox" onclick="myFunction()">Show Password</span> -->
 
 
