--- a/HTML/home.html
+++ b/HTML/home.html
@@ -151,17 +151,14 @@
                 <input type="password" placeholder="Confirm Password" name="password" id="pass" class="box" required><br><br>
                 <span><input type="checkbox" onclick="myFunction()">Show Password</span>
             </div>
-            <div class="icon">
-               <p class="size">Already have an account <strong><a href="login.html" class="change">Login</a></strong></p>
-             </div>
             <!-- <span><input type="checkbox" onclick="myFunction()">Show Password</span> -->
 
 
             
-
+        </form>
         
         <div class="icon">
-         <button class="btn solid" onclick="makeGetRequest()"  value="SignUp">Submit</button> </form>
+         <button class="btn solid" onclick="makeGetRequest()"  value="SignUp">Submit</button> 
 </div>
     </section>
 
