--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,7 +28,7 @@
     <section class="home" id="home">
         <div class="row">
             <div class="content">
-                <h3 style="color:#d8cbc4 ;">_ </h3>
+                <h3 style="color:#f2eee3 ;">_ </h3>
                 <b>
                     <h3>Meeting room booking application</h3>
                 </b>
