latest changes on the project

--- a/HTML/booking.html
+++ b/HTML/booking.html
@@ -43,7 +43,7 @@
             <button>Choose Room</button>
 
         </form>
-        </ <div class="sidebar">
+         <div class="sidebar">
         <div class="logo_content">
             <!-- <div class="logo">
                         <img src="images/logo3.png" width="23%">
