--- a/HTML/capacity1.html
+++ b/HTML/capacity1.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="assets/capacity1.css">
     <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi"
-        rel="stylesheet">
 </head>
 
 <body>
@@ -23,6 +21,13 @@
             location.href = 'login.html'
         }
     </script>
+
+<header class="header">
+        <img src="images/logo3.png" width="3%" height="3%" > 
+    <h2 style="margin-right: 30%;">BOOK SMALL ROOMS FOR MEETING</h2>
+    <!-- <img src="images/Logout11.png" width="4%" height="2%" onclick="logout()" style="cursor: pointer;"
+        title="Click to Logout"> -->
+</header>
 
     <div id="main"></div>
     <script src="capacity1.js"> </script>
