--- a/HTML/capacity8.html
+++ b/HTML/capacity8.html
@@ -19,11 +19,18 @@
         <script>
             var haveaccess = localStorage.getItem('userDetails');
             if (haveaccess) {
-    
+
             } else {
                 location.href = 'login.html'
             }
         </script>
+
+        <header class="header">
+            <img src="images/logo3.png" width="3%" height="3%">
+            <h2 style="margin-right: 30%;">BOOK LARGE ROOMS FOR MEETING</h2>
+            <!-- <img src="images/Logout11.png" width="4%" height="2%" onclick="logout()" style="cursor: pointer;"
+    title="Click to Logout"> -->
+        </header>
 
         <div id="main"></div>
         <script src="capacity8.js"> </script>
