--- a/HTML/userProfile.html
+++ b/HTML/userProfile.html
@@ -23,10 +23,12 @@
 
     <header class="header">
         <!--    <div id="menu-btn" class="fas fa-bars"></div> -->
-        <i class="logo"> <img src="images/logo3.png" width="8%" height="7%" > </i>
-        <!-- <h3>Booked Room Details</h3> -->
-        <img src="images/Logout2.png" width="3%" height="3%" onclick="logout()" style="cursor: pointer;"
-            title="Click to Logout">
+        <!-- <i class="logo">  -->
+            <img src="images/logo3.png" width="3%" height="3%" > 
+        <!-- </i> -->
+        <h2 style="margin-right: 37%;">BOOKED ROOM DETAILS</h2>
+        <!-- <img src="images/Logout11.png" width="4%" height="2%" onclick="logout()" style="cursor: pointer;"
+            title="Click to Logout"> -->
             <!-- <i class='bx bx-log-out'></i> -->
     </header>
 
