--- a/HTML/login.html
+++ b/HTML/login.html
@@ -2,12 +2,15 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/login.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
   <title>Login</title>
 </head>
 
 <body style="overflow: hidden;">
-  <img src="images\logo3-removebg-preview.png" onclick="gotoHome()" width="3%" height="3%" style="cursor: pointer;" title="Go to Home Page">
+  <img src="images\logo3-removebg-preview.png" onclick="gotoHome()" width="3%" height="3%" style="cursor: pointer;"
+    title="Go to Home Page">
   <!-- <i class="title">Planzo</i> -->
   <div class="login-page">
     <div class="form">
@@ -19,10 +22,12 @@
       </div>
       <form class="login-form" method="get" id="formReset">
         <input type="text" id="username" placeholder="username" />
-        <input type="password" id="password" placeholder="password" />
+        <input type="password" id="password" placeholder="password" /><i class="far fa-eye" id="togglePassword"
+          style="margin-left: -36px; cursor: pointer;"></i>
       </form>
       <button class="btn solid" onclick="makeGetRequest()" value="SignUp">Login</button>
-      <h5 style="color:#664229;margin-top: auto;">Do you have an account?<a style="cursor: pointer;color: blue;font-size: medium;" onclick="gotoRegister()">Register</a></h5>
+      <h5 style="color:#664229;margin-top: auto;">Do you have an account?<a
+          style="cursor: pointer;color: blue;font-size: medium;" onclick="gotoRegister()">Register</a></h5>
 
     </div>
   </div>
@@ -56,7 +61,7 @@
             }).then((value) => {
               location.href = "select.html"
               localStorage.setItem("userDetails", JSON.stringify([username, password]));
-              localStorage.setItem('userId',json.user_id)
+              localStorage.setItem('userId', json.user_id)
             })
 
             // location.href = "select.html";
@@ -78,9 +83,9 @@
               icon: "success",
               button: "OK",
             }).then((value) => {
-              location.href = "userProfile.html"
+              location.href = "adminPanel.html"
               localStorage.setItem("userDetails", JSON.stringify([username, password]));
-              localStorage.setItem('userId',json.user_id)
+              localStorage.setItem('userId', json.user_id)
             })
           }
 
@@ -88,13 +93,24 @@
       document.getElementById("formReset").reset();
     }
 
-function gotoRegister(){
-  location.href="register.html"
-}
+    function gotoRegister() {
+      location.href = "register.html"
+    }
 
-function gotoHome(){
-  location.href="homepage.html"
-}
+    function gotoHome() {
+      location.href = "homepage.html"
+    }
+
+    const togglePassword = document.querySelector('#togglePassword');
+    const password = document.querySelector('#password');
+
+    togglePassword.addEventListener('click', function (e) {
+      // toggle the type attribute
+      const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+      password.setAttribute('type', type);
+      // toggle the eye slash icon
+      this.classList.toggle('fa-eye-slash');
+    });
 
   </script>
 </body>
