--- a/HTML/register.html
+++ b/HTML/register.html
@@ -3,11 +3,13 @@
 
 <head>
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
   <title>Register</title>
 </head>
 
 <body style="overflow: hidden;">
-  <img src="images\logo3-removebg-preview.png" width="5%" height="3%" onclick="gotoHome()" style="cursor: pointer;"
+  <img src="images\logo3-removebg-preview.png" width="3%" height="3%" onclick="gotoHome()" style="cursor: pointer;"
     title="Go to Home Page">
   <!-- <i class="title">Planzo</i> -->
   <div class="register-page">
@@ -21,19 +23,16 @@
       <form class="login-form" id="formReset">
         <div class="icon">
           <input type="text" placeholder=" username" name="name" class="box" id="username" required>
-          <i class="fas fa-user"></i>
         </div>
         <div class="icon">
-          <input type="password" placeholder="password" name="password" id="password" class="box" required>
-          <i class="fas fa-lock"></i>
+          <input type="password" placeholder="password" name="password" id="password" class="box" required><i class="far fa-eye" id="togglePassword"
+          style="margin-left: -22px; cursor: pointer;"></i>
         </div>
         <div class="icon">
           <input type="tel" placeholder="phone" name="number" id="phone" class="box" required>
-          <i class="fa-solid fa-phone"></i>
         </div>
         <div class="icon">
           <input type="email" placeholder="email" name="email" class="box" id="email" required>
-          <i class="fas fa-envelope"></i>
         </div>
       </form>
       <button class="btn solid" onclick="makeGetRequest()">Submit</button>
@@ -91,6 +90,17 @@
     function gotoHome() {
       location.href = "homepage.html"
     }
+
+    const togglePassword = document.querySelector('#togglePassword');
+    const password = document.querySelector('#password');
+
+    togglePassword.addEventListener('click', function (e) {
+      // toggle the type attribute
+      const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+      password.setAttribute('type', type);
+      // toggle the eye slash icon
+      this.classList.toggle('fa-eye-slash');
+    });   
   </script>
 </body>
 
