--- a/HTML/select.html
+++ b/HTML/select.html
@@ -76,6 +76,7 @@
   </div>
 
   <div class="container">
+    <!-- <i class="fa fa-spinner fa-5x" class="spinner" id="spinner"></i> -->
 
     <div class="box" onclick="navigatetosmallRooms()" style="cursor: pointer;" >
       <div class="imgBx">
@@ -134,6 +135,7 @@
 
     btn.onclick = function () {
       sidebar.classList.toggle("active");
+      
     }
 
 
