added order refreshment

--- a/HTML/select.html
+++ b/HTML/select.html
@@ -40,30 +40,30 @@
         </a>
         <span class="tooltip" style="text-align: center;">Booking Rooms</span>
       </li> -->
-      <!-- <li>
+      <li>
         <a href="order.html">
           <i class='bx bxs-coffee-alt'></i>
           <span class="links_name">Order </span>
         </a>
         <span class="tooltip">Order Refreshments</span>
-      </li> -->
+      </li>
       <li onclick="gotoyourBookings()" style="cursor: pointer;">
         <a >
           <i class='bx bxs-user'></i>
-          <span class="links_name">User</span>
+          <span class="links_name">YourBookings</span>
         </a>
         <span class="tooltop">Your Bookings</span>
       </li>
        
-      <li onclick="logout()" style="cursor: pointer;">
+      <!-- <li onclick="logout()" style="cursor: pointer;">
         <a style="margin-top: 290px;">
           <i class='bx bx-log-out'></i>
           <span class="links_name">Log out</span>
         </a>
         <span class="tooltop">Log Out</span>
-      </li>
+      </li> -->
     </ul>
-    <!-- <ul>
+    <ul>
       <li onclick="logout()" style="cursor: pointer;">
         <a>
           <i class='bx bx-log-out'></i>
@@ -71,7 +71,7 @@
         </a>
         <span class="tooltop">Log Out</span>
       </li>
-    </ul> -->
+    </ul>
 
   </div>
 
