--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -10,6 +10,31 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.0/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <title>Booking website</title>
+
+    <style>
+         .button {
+            border: none;
+            color: white;
+            padding: 8px 17px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 15px;
+            margin: 4px 2px;
+            cursor: pointer;
+            float: right;
+        }
+
+        .button1 {
+            background-color: rgb(244, 103, 103);
+        }
+
+        /* Green */
+        .button2 {
+            background-color: #008CBA;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -36,7 +61,7 @@
                 </b>
                 <h1>With only a couple of clicks and some filters,
                     employees can book a conference room that fits their needs.</h1>
-                <b><a href="#" class="btn" onclick="submmit()">Explore</a></b>
+                <b><a href="Explore.html" class="btn" onclick="submmit()">Explore</a></b>
             </div>
             <!-- f0r---------------------slider------------------- -->
             <section class="product">
@@ -125,33 +150,9 @@
         </div>
     </section>
 
-    <!-- <section class="book" id="book">
-        <h1 class="heading" id="register">Register</h1>
-        <form action="" name="reg_form" onsubmit="return validate()">
-            <div class="icon">
-                <input type="text" placeholder=" NAME" name="name" class="box" required>
-                <i class="fas fa-user"></i>
-            </div>
-            <div class="icon">
-                <input type="email" placeholder="EMAIL" name="email" class="box" required>
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="icon">
-                <input type="tel" placeholder="NUMBER" name="number" class="box" required>
-                <i class="fa-solid fa-phone"></i>
-            </div>
-            <div class="icon">
-                <input type="password" placeholder="PASSWORD" name="password" class="box" required>
-                <i class="fas fa-lock"></i>
-            </div>
-            <input type="SUBMIT" placeholder="SUBMIT" class="btn">
-            <button class="btn solid" value="SignUp">Submit</button>
-            <button class="btn solid" value="SignUp"><a class="link_btn" href="login.html">Submit</a></button>
-            <span >Already have a account<a href="login.html">Login</a></span>
-        </form>
-    </section> -->
-
-
+    <div>
+        <button class="button button1" onclick="topFunction()" id="myBtn" title="Go to top">Go to Top  <i class='fa fa-arrow-circle-up' style="font-size:18px"></i></button>
+    </div>
 
 
     <script>
@@ -186,6 +187,30 @@
             location.href = "register.html"
         }
     </script>
+
+<script>
+    // Get the button
+    let mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            mybutton.style.display = "block";
+        } else {
+            mybutton.style.display = "none";
+        }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+
+
 </body>
 
 </html>
