--- a/HTML/book.html
+++ b/HTML/book.html
@@ -85,7 +85,7 @@
                     <i class="fa fa-envelope email"></i>
                 </div>
                 <div class="icon">
-                    <input type="tel" id="phone" placeholder="phone" class="box">
+                    <input type="number" id="phone" placeholder="phone" class="box" pattern="[1-9]{1}[0-9]{9}" maxlength="10">
                     <i class="fa fa-phone"></i>
                 </div>
                 <div class="icon">
