--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -15,7 +15,7 @@
          .button {
             border: none;
             color: white;
-            padding: 8px 17px;
+            padding: 7px 8px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -23,6 +23,7 @@
             margin: 4px 2px;
             cursor: pointer;
             float: right;
+            border-radius: 10PX;
         }
 
         .button1 {
@@ -101,7 +102,7 @@
         <h1 class="heading" id="aboutus">about us<span></span></h1>
         <div class="row">
             <div class="image">
-                <img src="images\myimage2.jpg" alt="">
+                <img src="images\myimage2.jpg" alt="" width="100%">
             </div>
             <div class="content">
                 <b>
