changes on admin panel

--- a/HTML/Explore.html
+++ b/HTML/Explore.html
@@ -61,8 +61,6 @@
     <header class="header">
         <img src="images/logo3.png" width="3%" height="3%">
         <h2 style="margin-right:32%;">EXPLORE MORE ABOUT MEETING ROOM</h2>
-        <!-- <img src="images/Logout11.png" width="4%" height="2%" onclick="logout()" style="cursor: pointer;"
-        title="Click to Logout"> -->
     </header>
     <div style="margin-top:112px;">
         <img src="images\4con.jpg" alt="" width="20%">
@@ -87,7 +85,7 @@
 
             </ul>
         </div>
-        <div style="margin-left:200px;">
+        <div style="margin-left:200px;cursor: pointer;">
             <img src="images\Framery-One-Privacy-Pod-Ultra-1.jpg" alt="" width="22%" height="84%" title="Small room">
             <img src="images\4con.jpg" alt="" width="22%" title="Medium room">
             <img src="images\8.jpg" alt="" width="22%" title="Large room">
