--- a/HTML/adminPanel.html
+++ b/HTML/adminPanel.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <div class="box" onclick="navigatetomediumRooms()" style="cursor: pointer;">
+            <div class="box" onclick="availableRooms()" style="cursor: pointer;">
                 <div class="imgBx">
                     <img src="images\available1.jpeg">
                 </div>
@@ -135,6 +135,9 @@
 
         function alreadybookedRooms(){
             location.href="userProfile.html"
+        }
+        function availableRooms(){
+            location.href="available.html"
         }
         function adminBook(){
             location.href="select.html"
