--- a/HTML/select.html
+++ b/HTML/select.html
@@ -45,7 +45,7 @@
           <i class='bx bxs-coffee-alt'></i>
           <span class="links_name">Order </span>
         </a>
-        <span class="tooltip">Order Refreshments</span>
+        <span class="tooltop">Order Refreshments</span>
       </li>
       <li onclick="gotoyourBookings()" style="cursor: pointer;">
         <a >
